PT-1994: Print pedigree Added a pedigree print dialog/ability to print pedigrees. Also fixes visible editor-mode only symbols (e.g. node shading) visible in saved pedigree images.

--- a/components/pedigree/resources/src/main/resources/pedigree/editor.css
+++ b/components/pedigree/resources/src/main/resources/pedigree/editor.css
@@ -812,6 +812,37 @@
 .msdialog-modal-container .pedigree-template-chooser {
     width: 720px;
 }
+
+.msdialog-modal-container .pedigree-print-dialog {
+  width: 750px !important;
+  max-width: 750px !important;
+}
+.print-preview-header {
+  display: flex;
+  margin-bottom: 10px;
+}
+.print-preview-footer {
+  margin-top: 8px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 25px;
+}
+.print-zoom-value {
+  display: inline-block;
+  width: 45px;
+  height: 25px;
+  text-align: center;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+.print-zoom-button {
+  width:25px;
+  height:25px;
+}
+.print-zoom-minus-button {
+  margin-left: 10px;
+}
+
 .picture-box {
     display: inline-block;
     box-shadow: rgba(0, 0, 0, 0.5) 0 0 5px 2px;
